--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -261,4 +261,7 @@ network_policies:
     networking:neutron:Deployment:neutron-server:
       - from:
         - default: selector
+    instance-ha:masakari:Deployment:masakari-api:
+      - from:
+        - default: selector
   egress: {}
