--- a/openstack_controller/templates/child_objects/dashboard.yaml
+++ b/openstack_controller/templates/child_objects/dashboard.yaml
@@ -4,11 +4,12 @@ horizon:
     horizon:
       connections:
         egress:
-          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["http"]) | indent(12)}}
-          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-cfn", ["http"]) | indent(12)}}
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["h-api"]) | indent(12)}}
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-cfn", ["h-cfn"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
           - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
+          - {{ to_child_object("instance-ha", "masakari", "Deployment", "masakari-api", ["m-api"]) | indent(12)}}
       hash_fields: []
       images:
       - horizon
