--- a/openstack_controller/templates/child_objects/instance-ha.yaml
+++ b/openstack_controller/templates/child_objects/instance-ha.yaml
@@ -18,6 +18,7 @@ masakari:
         egress:
           - {{ to_child_object("coordination", "etcd", "StatefulSet", "etcd-etcd", ["client"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("instance-ha", "masakari", "Deployment", "masakari-api", ["m-api"]) | indent(12)}}
       hash_fields: []
       images:
       - masakari_monitors
@@ -40,6 +41,10 @@ masakari:
       pod_labels:
         application: masakari
         component: api
+      ports:
+      - name: m-api
+        port: 15868
+        protocol: TCP
     masakari-engine:
       connections:
         egress:
