--- a/openstack_controller/templates/child_objects/tempest.yaml
+++ b/openstack_controller/templates/child_objects/tempest.yaml
@@ -43,7 +43,7 @@ tempest:
     tempest-static-accounts:
       connections:
         egress:
-          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["http"]) | indent(12)}}
+          - {{ to_child_object("orchestration", "heat", "Deployment", "heat-api", ["h-api"]) | indent(12)}}
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("compute", "nova", "Deployment", "nova-api-osapi", ["n-api"]) | indent(12)}}
       hash_fields: []
