--- a/openstack_controller/templates/child_objects/key-manager.yaml
+++ b/openstack_controller/templates/child_objects/key-manager.yaml
@@ -18,6 +18,7 @@ barbican:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
       hash_fields: []
       images:
       - barbican_api
