--- a/openstack_controller/templates/child_objects/messaging.yaml
+++ b/openstack_controller/templates/child_objects/messaging.yaml
@@ -1,6 +1,10 @@
+{%- from 'macros/connections.j2' import to_child_object %}
 rabbitmq:
   Job:
     openstack-rabbitmq-cluster-wait:
+      connections:
+        egress:
+          - {{ to_child_object("messaging", "rabbitmq", "StatefulSet", "openstack-rabbitmq-rabbitmq", ["amqp"]) | indent(12)}}
       hash_fields:
       - endpoints.oslo_messaging.*
       images:
@@ -21,3 +25,13 @@ rabbitmq:
         application: rabbitmq
         component: server
         release_group: openstack-rabbitmq-rabbitmq
+      ports:
+      - port: 15672
+        name: http
+        protocol: TCP
+      - port: 5672
+        name: amqp
+        protocol: TCP
+      - port: 25672
+        name: clustering
+        protocol: TCP
