--- a/openstack_controller/templates/services/messaging.yaml
+++ b/openstack_controller/templates/services/messaging.yaml
@@ -44,11 +44,15 @@ spec:
                   periodSeconds: 60
                   timeoutSeconds: 30
       manifests:
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         job_users_create: true
         {%- if external_notifications_enabled %}
         service_external: true
         {%- endif %}
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/messaging.yaml' %}
+{%- endif %}
       volume:
         enabled: false
       conf:
