--- a/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -484,7 +484,27 @@ spec:
           rabbitmq_scripted_test: rabbitmq-scripted-test:latest
       manifests:
         job_users_create: true
-        network_policy: false
+        network_policy: true
+      network_policy:
+        server:
+          spec:
+            ingress:
+              - from:
+                - default: selector
+              - from:
+                - ipBlock:
+                    cidr: 192.168.0.0/16
+              - from:
+                - namespaceSelector:
+                    matchLabels:
+                      name: stacklight
+            podSelector:
+              matchLabels:
+                application: rabbitmq
+                component: server
+                release_group: openstack-rabbitmq
+            policyTypes:
+            - Ingress
       monitoring:
         prometheus:
           enabled: true
