--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -273,4 +273,7 @@ network_policies:
     image:glance:Deployment:glance-registry:
       - from:
         - default: selector
+    block-storage:cinder:Deployment:cinder-api:
+      - from:
+        - default: selector
   egress: {}
