--- a/openstack_controller/templates/child_objects/block-storage.yaml
+++ b/openstack_controller/templates/child_objects/block-storage.yaml
@@ -17,6 +17,7 @@ cinder:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("database", "mariadb", "StatefulSet", "mariadb-server", ["mysql"]) | indent(12)}}
+          - {{ to_child_object("block-storage", "cinder", "Deployment", "cinder-api", ["c-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ks_endpoints
@@ -68,6 +69,10 @@ cinder:
       pod_labels:
         application: cinder
         component: api
+      ports:
+      - port: 8776
+        name: c-api
+        protocol: TCP
   Job:
     cinder-backup-storage-init:
       hash_fields: []
@@ -149,6 +154,7 @@ cinder:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("block-storage", "cinder", "Deployment", "cinder-api", ["c-api"]) | indent(12)}}
       hash_fields: []
       images:
       - cinder_drop_default_volume_type
