Add more network policies for heat engine
Related-Prod: PRODX-3456

Change-Id: I48a9b114e55fc0ad13257b8526ffe8ec26cfde62

--- a/tests/fixtures/network_policies/output/block-storage.yaml
+++ b/tests/fixtures/network_policies/output/block-storage.yaml
@@ -62,6 +62,10 @@ block-storage:cinder:Deployment:cinder-api:
         component: engine
   - podSelector:
       matchLabels:
+        application: heat
+        component: engine
+  - podSelector:
+      matchLabels:
         application: manila
         component: share_daemonset
   - podSelector:
