--- a/tests/fixtures/network_policies/output/compute.yaml
+++ b/tests/fixtures/network_policies/output/compute.yaml
@@ -95,6 +95,10 @@ compute:nova:Deployment:nova-api-osapi:
         component: engine
   - podSelector:
       matchLabels:
+        application: heat
+        component: engine
+  - podSelector:
+      matchLabels:
         application: manila
         component: share
   - podSelector:
