--- a/tests/fixtures/network_policies/output/instance-ha.yaml
+++ b/tests/fixtures/network_policies/output/instance-ha.yaml
@@ -16,6 +16,14 @@ instance-ha:masakari:Deployment:masakari-api:
       matchLabels:
         application: masakari
         component: monitors
+  - podSelector:
+      matchLabels:
+        application: heat
+        component: engine
+  - podSelector:
+      matchLabels:
+        application: heat
+        component: engine
   ports:
   - port: 15868
     protocol: TCP
