Add network policies for shared file system
Related-Prod: PRODX-35446
Change-Id: Ifac8a696eb286d55e97ea05645e8860126c4583c

--- a/openstack_controller/templates/child_objects/block-storage.yaml
+++ b/openstack_controller/templates/child_objects/block-storage.yaml
@@ -86,6 +86,7 @@ cinder:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("block-storage", "cinder", "Deployment", "cinder-api", ["c-api"]) | indent(12)}}
       hash_fields:
       - network.proxy.*
       - bootstrap.*
