--- a/openstack_controller/templates/child_objects/shared-file-system.yaml
+++ b/openstack_controller/templates/child_objects/shared-file-system.yaml
@@ -49,11 +49,16 @@ manila:
       pod_labels:
         application: manila
         component: api
+      ports:
+      - name: m-api
+        port: 8786
+        protocol: TCP
   Job:
     manila-bootstrap:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("shared-file-system", "manila", "Deployment", "manila-api", ["m-api"]) | indent(12)}}
       hash_fields:
       - network.proxy.*
       - bootstrap.*
