Add network policies for dns
Related-Prod: PRODX-35449
Change-Id: I3954b4134d10b6014cb4d5ae6a1f967725e9a74c

--- a/openstack_controller/templates/base/network_policies/identity.yaml
+++ b/openstack_controller/templates/base/network_policies/identity.yaml
@@ -1,7 +1,7 @@
 {%- from 'macros/connections.j2' import from_pod_networks %}
 {%- from 'macros/connections.j2' import from_namespaces %}
 {%- set ns_list = ["os_controller", "ceph_deployment", "lma_deployment", "tf_deployment"] | namespaces  %}
-        keystine-api:
+        api:
           spec:
             podSelector:
               matchLabels:
