--- a/tests/fixtures/render_service_template/input/common_template_args.yaml
+++ b/tests/fixtures/render_service_template/input/common_template_args.yaml
@@ -291,4 +291,7 @@ network_policies:
     metric:gnocchi:Deployment:gnocchi-api:
       - from:
         - default: selector
+    dns:designate:StatefulSet:designate-api:
+      - from:
+        - default: selector
   egress: {}
