--- a/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/image/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -301,13 +301,13 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
                 - namespaceSelector:
                     matchLabels:
-                      name: tf
+                      kubernetes.io/metadata.name: tf
             podSelector:
               matchLabels:
                 application: glance
