--- a/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/messaging/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -497,7 +497,7 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
             podSelector:
               matchLabels:
                 application: rabbitmq
