--- a/openstack_controller/templates/child_objects/ingress.yaml
+++ b/openstack_controller/templates/child_objects/ingress.yaml
@@ -18,6 +18,7 @@ ingress:
           - {{ to_child_object("block-storage", "cinder", "Deployment", "cinder-api", ["c-api"]) | indent(12)}}
           - {{ to_child_object("baremetal", "ironic", "Deployment", "ironic-api", ["m-api"]) | indent(12)}}
           - {{ to_child_object("shared-file-system", "manila", "Deployment", "manila-api", ["m-api"]) | indent(12)}}
+          - {{ to_child_object("dns", "designate", "StatefulSet", "designate-api", ["dns-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ingress
