--- a/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/identity/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -196,7 +196,7 @@ spec:
           rabbit_init: rabbit-init:latest
           test: test:latest
       network_policy:
-        keystine-api:
+        api:
           spec:
             ingress:
               - from:
@@ -207,16 +207,16 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
                 - namespaceSelector:
                     matchLabels:
-                      name: rook-ceph
+                      kubernetes.io/metadata.name: rook-ceph
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
                 - namespaceSelector:
                     matchLabels:
-                      name: tf
+                      kubernetes.io/metadata.name: tf
             podSelector:
               matchLabels:
                 application: keystone
