--- a/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/instance-ha/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -174,7 +174,7 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
             podSelector:
               matchLabels:
                 application: masakari
