--- a/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/orchestration/ussuri_ceph_local_non_dvr_telemetry.yaml
@@ -228,10 +228,10 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
             podSelector:
               matchLabels:
                 application: heat
@@ -246,10 +246,10 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
             podSelector:
               matchLabels:
                 application: heat
