--- a/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr_telemetry.yaml
+++ b/tests/fixtures/render_service_template/output/shared-file-system/yoga_ceph_local_non_dvr_telemetry.yaml
@@ -223,10 +223,10 @@ spec:
               - from:
                 - namespaceSelector:
                     matchLabels:
-                      name: osh-system
+                      kubernetes.io/metadata.name: osh-system
                 - namespaceSelector:
                     matchLabels:
-                      name: stacklight
+                      kubernetes.io/metadata.name: stacklight
             podSelector:
               matchLabels:
                 application: manila
