Add network policies for baremetal
Related-Prod: https://mirantis.jira.com/browse/PRODX-34773
Change-Id: Ib35034c6e6f2217af903dc0b21f44ebbf59a1c58

--- a/openstack_controller/templates/child_objects/baremetal.yaml
+++ b/openstack_controller/templates/child_objects/baremetal.yaml
@@ -18,6 +18,10 @@ ironic:
       pod_labels:
         application: ironic
         component: api
+      ports:
+      - port: 6385
+        name: m-api
+        protocol: TCP
   Job:
     ironic-bootstrap:
       connections:
@@ -95,6 +99,7 @@ ironic:
       connections:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
+          - {{ to_child_object("networking", "neutron", "Deployment", "neutron-server", ["q-api"]) | indent(12)}}
       hash_fields: []
       images:
       - ironic_manage_networks
@@ -107,6 +112,7 @@ ironic:
         egress:
           - {{ to_child_object("identity", "keystone", "Deployment", "keystone-api", ["ks-pub"]) | indent(12)}}
           - {{ to_child_object("image", "glance", "Deployment", "glance-api", ["g-api"]) | indent(12)}}
+          - {{ to_child_object("baremetal", "ironic", "Deployment", "ironic-api", ["m-api"]) | indent(12)}}
       hash_fields:
       - conf.nodes.*
       images:
