--- a/openstack_controller/templates/services/baremetal.yaml
+++ b/openstack_controller/templates/services/baremetal.yaml
@@ -70,8 +70,12 @@ spec:
           db_init:
             jobs:
               - openstack-mariadb-cluster-wait
+{%- if spec.get("features", {}).get("network_policies", {}).get("enabled", false) %}
+      network_policy:
+{% include 'base/network_policies/baremetal.yaml' %}
+{%- endif %}
       manifests:
-        network_policy: false
+        network_policy: {{ spec.get("features", {}).get("network_policies", {}).get("enabled", false) }}
         job_rabbit_init: false
         secret_ca_bundle: true
         job_update_nodes_metadata: true
