--- a/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_ironic_mt/context_spec.yaml
+++ b/tests/fixtures/render_service_template/input/yoga_ceph_local_non_dvr_ironic_mt/context_spec.yaml
@@ -14,6 +14,8 @@ features:
   messaging:
     components_with_dedicated_messaging:
     - networking
+  network_policies:
+    enabled: true
   neutron:
     backend: ml2
     dns_servers:
